--- a/code.html
+++ b/code.html
@@ -106,6 +106,12 @@
                    <img src="images/img-4.png" alt="card-img">
             </div>
         </li>
+        <div class="timer">
+            <p>Time: --:--</p>
+        </div>
+        <div class="start-btn">
+            <button>Start</button>
+        </div>
     </div>      
 <script src="script.js"></script>
 </body>
