--- a/code.html
+++ b/code.html
@@ -106,11 +106,12 @@
                    <img src="images/img-4.png" alt="card-img">
             </div>
         </li>
-        <div class="timer">
-            <p>Time: --:--</p>
+        <div id="timer">
+            <p id="time">Time: <span id="second">00</span>:<span id="tens">00</span></p>
         </div>
-        <div class="start-btn">
-            <button>Start</button>
+        <div>
+            <button id="btn-start">Start</button>
+            <button id="btn-reset">Reset</button>
         </div>
     </div>      
 <script src="script.js"></script>
