--- a/code.html
+++ b/code.html
@@ -107,10 +107,11 @@
             </div>
         </li>
         <div id="timer">
-            <p id="time">Time: <span id="second">00</span>:<span id="tens">00</span></p>
+            <p id="time">Time: <span id="second">00</span>:<span id="tens">00</span> sec</p>
         </div>
         <div>
             <button id="btn-start">Start</button>
+            <button id="btn-stop">Stop</button>
             <button id="btn-reset">Reset</button>
         </div>
     </div>      
